--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -3,8 +3,10 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  width: 100%; }
-  html #root,
-  body #root {
+  width: 100%;
+
+  #root {
     height: 100%;
-    width: 100%; }
+    width: 100%
+  }
+}
